--- a/views/product-details.ejs
+++ b/views/product-details.ejs
@@ -107,7 +107,7 @@
                   </a>
                   </br>
                   <% if (isAuthenticated) { %>
-                    <a href="<%= (save_status) ? '/remove-from-wishlist/'+product.id : '/add-to-wishlist/'+product.id %>"
+                    <a href="<%= (save_status) ? '/remove-from-wishlist/'+product.id+'/product' : '/add-to-wishlist/'+product.id %>"
                       class="btn btn-light border border-secondary py-2 icon-hover px-3  <%= (save_status) ? '' : 'add-wishlist' %>">
                       <i class="me-1 fa fa-heart fa-lg"></i>
                       <%= (save_status) ? 'Saved' : 'Save' %>
