--- a/views/products.ejs
+++ b/views/products.ejs
@@ -30,7 +30,9 @@
                                  <div class="row">
                            <% } %>
                         <% } %>
-                     <% } %>  
+                     <% } else { %>  
+                        <h1>No product found.</h1>
+                     <% } %> 
                   </div>
                </div>             
             </div>
