--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1038,3 +1038,19 @@ a:hover {
 .text-warning2 {
     color: #bc7f0e;
 }
+.icon-hover-primary:hover {
+    border-color: #3b71ca !important;
+    background-color: white !important;
+  }
+  
+  .icon-hover-primary:hover i {
+    color: #3b71ca !important;
+  }
+  .icon-hover-danger:hover {
+    border-color: #dc4c64 !important;
+    background-color: white !important;
+  }
+  
+  .icon-hover-danger:hover i {
+    color: #dc4c64 !important;
+  }
