--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -26,6 +26,9 @@
                                     <div class="form-group">
                                         <input type="text" class="email-bt" placeholder="Email" name="email" value="<%= user.email %>">
                                     </div>
+                                    <div class="form-group">
+                                        <textarea rows="4" class="email-bt" placeholder="Full Address" name="full_address"><%= user.full_address %></textarea>
+                                    </div>
                                     <div class="send_btn">
                                         <div type="text" class="main_bt">
                                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
