--- a/views/product-details.ejs
+++ b/views/product-details.ejs
@@ -98,24 +98,22 @@
                </div>
              </div>
            </div>-->
-                  <a href="javascript:void(0)" class="btn btn-primary shadow-0">
-                    <% if(product.stock> 0) { %>
-                      <i class="me-1 fa fa-shopping-basket"></i> Add to cart
+                    
+                      <% if(product.stock> 0) { %>
+                        <a href="<%= (isAuthenticated) ? ((c_status) ? '/cart' : '/add-to-cart/'+product.id) : '/login' %>" class="btn btn-primary shadow-0">
+                          <i class="me-1 fa fa-shopping-basket"></i> <%= (c_status) ? 'Goto Cart' : 'Add to cart' %>
+                        </a>
                       <% } else { %>
-                        <i class="fa-solid fa-store-slash"></i> Stock out
-                        <% } %>
-                  </a>
-                  </br>
-                  <% if (isAuthenticated) { %>
-                    <a href="<%= (save_status) ? '/remove-from-wishlist/'+product.id+'/product' : '/add-to-wishlist/'+product.id %>"
-                      class="btn btn-light border border-secondary py-2 icon-hover px-3  <%= (save_status) ? '' : 'add-wishlist' %>">
-                      <i class="me-1 fa fa-heart fa-lg"></i>
-                      <%= (save_status) ? 'Saved' : 'Save' %>
-                    </a>
-                    <% } else { %>
-                      <a href="/login" class="btn btn-light border border-secondary py-2 icon-hover px-3"> <i
-                          class="me-1 fa fa-heart fa-lg"></i> Save </a>
+                        <a href="javascript:void(0)" class="btn btn-primary shadow-0">
+                          <i class="fa-solid fa-store-slash"></i> Stock out
+                        </a>
                       <% } %>
+                  </br>
+                    <a href="<%= (isAuthenticated) ? ((w_status) ? '/remove-from-wishlist/'+product.id+'/product' : '/add-to-wishlist/'+product.id) : '/login' %>"
+                      class="btn btn-light border border-secondary py-2 icon-hover px-3  <%= (w_status) ? '' : 'add-wishlist' %>">
+                      <i class="me-1 fa fa-heart fa-lg"></i>
+                      <%= (w_status) ? 'Saved' : 'Save' %>
+                    </a>
                 </div>
               </main>
             </div>
