--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -13,9 +13,9 @@
               <div class="col-lg-9">
                 <div class="card border shadow-0">
                   <div class="m-4">
-                    <h4 class="card-title mb-4">Your shopping cart</h4>
+                    <h4 class="card-title mb-4">Thank you for your order #</h4>
 
-                    <% let total = 0; if (products.length> 0) { %>
+                    
                       <% for (let prod of products) { total = parseFloat(total) + parseFloat(prod.price); %>
                         <div class="row gy-3 mb-4">
                           <div class="col-lg-5">
@@ -32,47 +32,20 @@
                           </div>
                           <div class="col-lg-2 col-sm-6 col-6 d-flex flex-row flex-lg-column flex-xl-row text-nowrap">
                             <div class="">
-                              <select style="width: 100px;" class="form-select me-4">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="<%= prod.carts.qty %>"><%= prod.carts.qty %></option>
-                                <option value="4">4</option>
-                              </select>
+                              <span><%= prod.carts.qty %></span>
                             </div>
                             <div class="">
                               <!--<text class="h6">Yellow, Jeans</text> <br />
                               <small class="text-muted text-nowrap"> $460.00 / per item </small>-->
                             </div>
                           </div>
-                          <div
-                            class="col-lg col-sm-6 d-flex justify-content-sm-center justify-content-md-start justify-content-lg-center justify-content-xl-end mb-2">
-                            <div class="float-md-end">
-                              <!--<a href="#" class="btn btn-light border px-2 icon-hover-primary"><i
-                                  class="fas fa-heart fa-lg px-1 text-secondary"></i></a>-->
-                              <a href="/remove-from-cart/<%= prod.id %>/cart" class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
-                            </div>
-                          </div>
                         </div>
                         <% } %>
-                      <% } else { %>
-                        <h1>Your Cart is empty. <a href="/products" class="btn btn-light w-100 border mt-2"> Shop fast! </a></h1>
-                      <% } %>
-                  </div>
-
-                  <div class="border-top pt-4 mx-4 mb-4">
-                    <p><i class="fas fa-truck text-muted fa-lg"></i> Free Delivery within 1-2 weeks</p>
-                    <p class="text-muted">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                      nisi ut
-                      aliquip
-                    </p>
                   </div>
                 </div>
               </div>
               <!-- cart -->
               <!-- summary -->
-              <% if (products.length> 0) { %>
               <div class="col-lg-3">
                 <div class="card mb-3 border shadow-0">
                   <!--<div class="card-body">
@@ -93,11 +66,11 @@
                         <p class="mb-2">Total price:</p>
                         <p class="mb-2">$<%= total %></p>
                       </div>
-                        <!--<div class="d-flex justify-content-between">
-                        <p class="mb-2">Discount:</p>
-                        <p class="mb-2 text-success">-$60.00</p>
-                      </div>
                       <div class="d-flex justify-content-between">
+                        <p class="mb-2">Payment Mode:</p>
+                        <p class="mb-2 text-success">Cash on Delivery</p>
+                      </div>
+                      <!--<div class="d-flex justify-content-between">
                         <p class="mb-2">TAX:</p>
                         <p class="mb-2">$14.00</p>
                       </div>
@@ -109,27 +82,18 @@
                       <div class="d-flex justify-content-between">
                         <p class="mb-2">Delivery Address:</p>
                         <p class="mb-2 fw-bold">
-                          <% if(address=='' ) { %>
-                            <span class="text-error">You have not added your address. Please <a href="/profile">add
-                                it</a> before order.</span>
-                            <% } else { %>
                               <%= address %>
-                                <% } %>
                         </p>
                       </div>
 
                       <div class="mt-3">
-                        <% if(address !='' ) { %>
-                          <a href="/order" class="btn btn-success w-100 shadow-0 mb-2"> Order Now </a>
-                          <% } %>
-                            <a href="/products" class="btn btn-light w-100 border mt-2"> Back to shop </a>
+                          <a href="/products" class="btn btn-light w-100 border mt-2"> Back to shop </a>
                       </div>
                     </div>
                   </div>
                 </div>
                 <!-- summary -->
               </div>
-              <% } %>
         </div>
     </section>
     <!-- cart + summary -->
