--- a/views/includes/sub-header.ejs
+++ b/views/includes/sub-header.ejs
@@ -29,7 +29,7 @@
                            <a class="nav-link" href="/wishlist"><i class="fa-solid fa-heart"></i><span><%= wishlistCount %></span></a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="/cart"><i class="fa-solid fa-cart-shopping"></i><span><%= cartCount %></span></a>
+                           <a class="nav-link" href="/cart"><i class="fa-solid fa-cart-shopping"></i><span><%= cartlistCount %></span></a>
                         </li>
                      <% } else { %>                        
                         <li class="nav-item <%= path === '/register' ? 'active' : '' %>">
