--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -13,9 +13,9 @@
               <div class="col-lg-9">
                 <div class="card border shadow-0">
                   <div class="m-4">
-                    <h4 class="card-title mb-4">Thank you for your order #</h4>
+                    <h4 class="card-title mb-4 text-success">Thank you for your order # <%= order_number %></h4>
 
-                    
+                    <% let total = 0; if (products.length> 0) { %>
                       <% for (let prod of products) { total = parseFloat(total) + parseFloat(prod.price); %>
                         <div class="row gy-3 mb-4">
                           <div class="col-lg-5">
@@ -32,7 +32,7 @@
                           </div>
                           <div class="col-lg-2 col-sm-6 col-6 d-flex flex-row flex-lg-column flex-xl-row text-nowrap">
                             <div class="">
-                              <span><%= prod.carts.qty %></span>
+                              <span><%= prod.orders.qty %></span>
                             </div>
                             <div class="">
                               <!--<text class="h6">Yellow, Jeans</text> <br />
@@ -40,7 +40,7 @@
                             </div>
                           </div>
                         </div>
-                        <% } %>
+                        <% } } %>
                   </div>
                 </div>
               </div>
@@ -64,7 +64,7 @@
                     <div class="card-body">
                       <div class="d-flex justify-content-between">
                         <p class="mb-2">Total price:</p>
-                        <p class="mb-2">$<%= total %></p>
+                        <p class="mb-2 text-success">$<%= total %></p>
                       </div>
                       <div class="d-flex justify-content-between">
                         <p class="mb-2">Payment Mode:</p>
@@ -81,7 +81,7 @@
                       </div>-->
                       <div class="d-flex justify-content-between">
                         <p class="mb-2">Delivery Address:</p>
-                        <p class="mb-2 fw-bold">
+                        <p class="mb-2 fw-bold text-success">
                               <%= address %>
                         </p>
                       </div>
