--- a/views/product-details.ejs
+++ b/views/product-details.ejs
@@ -46,7 +46,7 @@
                               <span class="text-warning2 ms-2"> <i class="fas fa-shopping-basket fa-sm mx-1"></i> Low stock. Order soon!
                             <% } %>
                           <% } else { %>
-                            <span class="text ms-2"> <i class="fa-solid fa-store-slash"></i> Stock out
+                            <span class="text-error ms-2"> <i class="fa-solid fa-store-slash"></i> Stock out
                             <% } %>
                         </span>
                   </div>
