--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -49,7 +49,7 @@
                             <div class="float-md-end">
                               <!--<a href="#" class="btn btn-light border px-2 icon-hover-primary"><i
                                   class="fas fa-heart fa-lg px-1 text-secondary"></i></a>-->
-                              <a href="/remove-from-cart/<%= prod.id %>/cart" class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
+                              <a href="/remove-from-cart/<%= prod.id %>/cart" class="btn btn-light border icon-hover-danger"> Remove</a>
                             </div>
                           </div>
                         </div>
