--- a/views/includes/sub-header.ejs
+++ b/views/includes/sub-header.ejs
@@ -22,6 +22,9 @@
                         <li class="nav-item <%= path === '/change_password' ? 'active' : '' %>">
                            <a class="nav-link" href="/change_password">Change Password</a>
                         </li>
+                        <li class="nav-item <%= path === '/orders' ? 'active' : '' %>">
+                           <a class="nav-link" href="/orders">Orders</a>
+                        </li>
                         <li class="nav-item">
                            <a class="nav-link" href="/logout">Logout</a>
                         </li>
