--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,93 +1,65 @@
-<%- include('includes/header.ejs') %>
-  <%- include('includes/sub-header.ejs') %>
+<%- include('includes/header.ejs'); %>
+  <%- include('includes/sub-header.ejs'); %>  
 
     <section class="bg-light my-5 pt-120">
       <div class="container">
         <div class="row">
-              <!-- cart -->
-              <div class="col-lg-9">
+              <div class="col-lg-12">
                 <div class="card border shadow-0">
                   <div class="m-4">
-                    <h4 class="card-title mb-4 text-success">Thank you for your order # <%= order_number %></h4>
 
-                    <% let total = 0; if (products.length> 0) { %>
-                      <% for (let prod of products) { total = parseFloat(total) + parseFloat(prod.price); %>
+                    <% if (orders.length> 0) { %>
+                      <% for (let order of orders) { %>                        
+                        <h4 class="card-title mb-4 text-success">Order Number # <%= order.order_number %></h4>
                         <div class="row gy-3 mb-4">
                           <div class="col-lg-5">
                             <div class="me-lg-5">
                               <div class="d-flex">
-                                <img src="<%= prod.image %>"
+                                <img src="<%= order.products.image %>"
                                   class="border rounded me-3" style="width: 96px; height: 96px;" />
                                 <div class="">
-                                  <a href="/product/<%= prod.id %>" class="nav-link"><%= prod.name %></a>
-                                  <p class="text-muted">$<%= prod.price %></p>
+                                  <a href="/product/<%= order.product_id %>" class="nav-link"><%= order.products.name %></a>
+                                  <p class="text-muted">$<%= order.product_price %> | <%= order.qty %></p>
                                 </div>
                               </div>
                             </div>
                           </div>
+                          <% if(order.status == 'Confirmed' || order.status == 'Shipped' || order.status == 'Delivered') { %>
                           <div class="col-lg-2 col-sm-6 col-6 d-flex flex-row flex-lg-column flex-xl-row text-nowrap">
                             <div class="">
-                              <span><%= prod.orders.qty %></span>
+                              <span>Confirmed</br></span>
                             </div>
                             <div class="">
-                              <!--<text class="h6">Yellow, Jeans</text> <br />
-                              <small class="text-muted text-nowrap"> $460.00 / per item </small>-->
+                              <text class="h6"><i class="fa fa-clock-o" aria-hidden="true"></i> <%= date.format(order.createdAt,'YYYY/MM/DD HH:mmA'); %></text> <br />
+                              <!--<small class="text-muted text-nowrap"><%= order.status %></small>-->
                             </div>
                           </div>
+                          <% } if(order.status == 'Shipped' || order.status == 'Delivered') { %>
+                          <div class="col-lg-2 col-sm-6 col-6 d-flex flex-row flex-lg-column flex-xl-row text-nowrap">
+                            <div class="">
+                              <span>Shipped</br></span>
+                            </div>
+                            <div class="">
+                              <text class="h6"><i class="fa fa-clock-o" aria-hidden="true"></i> <%= date.format(order.shippedAt,'YYYY/MM/DD HH:mmA'); %></text> <br />
+                              <!--<small class="text-muted text-nowrap"><%= order.status %></small>-->
+                            </div>
+                          </div>
+                          <% } if(order.status == 'Delivered') { %>
+                          <div class="col-lg-2 col-sm-6 col-6 d-flex flex-row flex-lg-column flex-xl-row text-nowrap">
+                            <div class="">
+                              <span><%= order.status %></br></span>
+                            </div>
+                            <div class="">
+                              <text class="h6"><i class="fa fa-clock-o" aria-hidden="true"></i> <%= date.format(order.deliveredAt,'YYYY/MM/DD HH:mmA'); %></text> <br />
+                              <!--<small class="text-muted text-nowrap"><%= order.status %></small>-->
+                            </div>
+                          </div>
+                          <% } %>
                         </div>
                         <% } } %>
                   </div>
                 </div>
               </div>
-              <!-- cart -->
-              <!-- summary -->
-              <div class="col-lg-3">
-                <div class="card mb-3 border shadow-0">
-                  <!--<div class="card-body">
-             <form>
-               <div class="form-group">
-                 <label class="form-label">Have coupon?</label>
-                 <div class="input-group">
-                   <input type="text" class="form-control border" name="" placeholder="Coupon code" />
-                   <button class="btn btn-light border">Apply</button>
-                 </div>
-               </div>
-             </form>
-           </div>
-         </div>-->
-                  <div class="card shadow-0 border">
-                    <div class="card-body">
-                      <div class="d-flex justify-content-between">
-                        <p class="mb-2">Total price:</p>
-                        <p class="mb-2 text-success">$<%= total %></p>
-                      </div>
-                      <div class="d-flex justify-content-between">
-                        <p class="mb-2">Payment Mode:</p>
-                        <p class="mb-2 text-success">Cash on Delivery</p>
-                      </div>
-                      <!--<div class="d-flex justify-content-between">
-                        <p class="mb-2">TAX:</p>
-                        <p class="mb-2">$14.00</p>
-                      </div>
-                      <hr />
-                      <div class="d-flex justify-content-between">
-                        <p class="mb-2">Total price:</p>
-                        <p class="mb-2 fw-bold">$283.00</p>
-                      </div>-->
-                      <div class="d-flex justify-content-between">
-                        <p class="mb-2">Delivery Address:</p>
-                        <p class="mb-2 fw-bold text-success">
-                              <%= address %>
-                        </p>
-                      </div>
-
-                      <div class="mt-3">
-                          <a href="/products" class="btn btn-light w-100 border mt-2"> Back to shop </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- summary -->
               </div>
         </div>
     </section>
