--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -26,13 +26,12 @@
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- owl stylesheets --> 
       <link rel="stylesheet" href="/css/owl.carousel.min.css">
-      <% if(path == '/product') { %>
-      <!--product details stylesheets 
-      <link rel="stylesheet" href="/css/product-details.css"> -->
-      <% } %>
       <!--<link rel="stylesheet" href="/css/owl.theme.default.min.css">-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-      
+      <% if(path == '/products') { %>
+         <script src="/js/jquery.min.js"></script>
+         <script src="/js/products.js"></script>
+      <% } %>
    </head>
    <body>
