--- a/views/product-details.ejs
+++ b/views/product-details.ejs
@@ -23,6 +23,9 @@
                   <h4 class="title text-dark">
                     <%= product.name %>
                   </h4>
+                  <h6 class="title text-dark small">
+                    <%= product.category.dataValues.name %>
+                  </h4>
                   <div class="d-flex flex-row my-3">
                     <% if(product.rating> 0) { %>
                       <div class="text-warning mb-1 me-2">
