--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -29,7 +29,7 @@
       <!--<link rel="stylesheet" href="/css/owl.theme.default.min.css">-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-      <% if(path == '/products') { %>
+      <% if(path == '/products' || path == '/cart') { %>
          <script src="/js/jquery.min.js"></script>
          <script src="/js/products.js"></script>
       <% } %>
