--- a/views/includes/sub-header.ejs
+++ b/views/includes/sub-header.ejs
@@ -13,7 +13,7 @@
                         <a class="nav-link" href="/">Home</a>
                      </li>
                      <li class="nav-item <%= path === '/products' ? 'active' : '' %>">
-                        <a class="nav-link" href="/products">Products</a>
+                        <a class="nav-link" href="/products/all">Products</a>
                      </li>
                      <% if (isAuthenticated) { %>
                         <li class="nav-item <%= path === '/profile' ? 'active' : '' %>">
