admin panel start

--- a/views/auth/change_password.ejs
+++ b/views/auth/change_password.ejs
@@ -7,6 +7,9 @@
                 <% if (errorMessage!='') { %>
                     <div class="user-message user-message--error"><%= errorMessage %></div>
                 <% } %>
+                <% if (successMessage!='') { %>
+                  <h5 class="mb-0 text-success"><%= successMessage %></h5>
+                <% } %>
             </div>
         </div>
         <div class="contact_section_2 layout_padding">
