--- a/views/admin/includes/header.ejs
+++ b/views/admin/includes/header.ejs
@@ -32,6 +32,7 @@
 
     <!-- Icons. Uncomment required icon fonts -->
     <link rel="stylesheet" href="/admin/vendor/fonts/boxicons.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
     <!-- Core CSS -->
     <link rel="stylesheet" href="/admin/vendor/css/core.css" class="template-customizer-core-css" />
