--- a/views/admin/category/list.ejs
+++ b/views/admin/category/list.ejs
@@ -3,12 +3,12 @@
   <div class="container-xxl flex-grow-1 container-p-y">
     <div class="row">
       <div class="col-md-6">
-        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Banners / </span> List</h4>
+        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Categories / </span> List</h4>
       </div>
       <div class="col-md-6">
         <ul class="nav nav-pills flex-column flex-md-row mb-3 float-right">
           <li class="nav-item">
-            <a class="nav-link active" href="/admin/banner/add"><i class="fa fa-plus-square" aria-hidden="true"></i> Add Banner</a>
+            <a class="nav-link active" href="/admin/category/add"><i class="fa fa-plus-square" aria-hidden="true"></i> Add Category</a>
           </li>
         </ul>
       </div>
@@ -31,25 +31,25 @@
           <thead>
             <tr>
               <th>ID</th>
-              <th>Heading</th>
-              <th>Status</th>
+              <th>Name</th>
               <th>Created At</th>
               <th>Actions</th>
             </tr>
           </thead>
           <tbody class="table-border-bottom-0">
-            <% if (banners.length> 0) { %>
-              <% for (let ban of banners) { %>
+            <% if (categories.length> 0) { %>
+              <% for (let category of categories) { %>
                 <tr>
-                  <td><%= ban.id %></td>
-                  <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>
-                      <%= ban.banner_heading1 %>
-                    </strong></td>
-                  <td><span class="badge bg-label-<%= (ban.active_status=='Y') ? 'primary' : 'warning' %> me-1">
-                      <%= (ban.active_status=='Y' ) ? 'Active' : 'Inactive' %>
-                    </span></td>
                   <td>
-                    <%= date.format(ban.createdAt,'YYYY/MM/DD HH:mmA'); %>
+                      <%= category.id %>
+                  </td>
+                  <td>
+                    <strong>
+                      <%= category.name %>
+                    </strong>
+                  </td>
+                  <td>
+                    <%= date.format(category.createdAt,'YYYY/MM/DD HH:mmA'); %>
                   </td>
                   <td>
                     <div class="dropdown">
@@ -57,10 +57,10 @@
                         <i class="bx bx-dots-vertical-rounded"></i>
                       </button>
                       <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/admin/banner/<%= ban.id %>">
+                        <a class="dropdown-item" href="/admin/category/<%= category.id %>">
                           <i class="bx bx-edit-alt me-1"></i> Edit
                         </a>
-                        <a class="dropdown-item" href="/admin/banner-delete/<%= ban.id %>">
+                        <a class="dropdown-item" href="/admin/category-delete/<%= category.id %>">
                           <i class="bx bx-trash me-1"></i> Delete
                         </a>
                       </div>
@@ -70,7 +70,7 @@
                 <% } %>
                   <% } else { %>
                     <tr>
-                      <td colspan="5"><strong>No result found!</strong></td>
+                      <td colspan="4"><strong>No result found!</strong></td>
                     </tr>
                     <% } %>
           </tbody>
