--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -10,7 +10,7 @@
 
                     <% if (orders.length> 0) { %>
                       <% for (let order of orders) { %>                        
-                        <h4 class="card-title mb-4 text-success">Order Number #  <%= order.order_number %></h4>
+                        <h4 class="card-title mb-4 text-success">Order Number #  <%= order.order_number + '-' + order.id %></h4>
                         <div class="row gy-3 mb-4">
                           <div class="col-lg-5">
                             <div class="me-lg-5">
