--- a/views/admin/order/view.ejs
+++ b/views/admin/order/view.ejs
@@ -1,7 +1,20 @@
 <%- include('../includes/header.ejs') %>
 
     <div class="container-xxl flex-grow-1 container-p-y">
-        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light"></span> Order</h4>
+        <div class="row">
+            <div class="col-md-6">
+                <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light"></span> Order</h4>
+            </div>
+            <% if(order.status != 'Delivered') { %>
+                <div class="col-md-6">
+                    <ul class="nav nav-pills flex-column flex-md-row mb-3 float-right">
+                    <li class="nav-item">
+                        <a class="nav-link text-warning active" href="/admin/order-status/<%= order.id %>"><i class="fab fa-first-order"></i> <%= (order.status=='Confirmed' ? 'Ship' : 'Deliver') %> the order</a>
+                    </li>
+                    </ul>
+                </div>
+            <% } %>
+        </div>
 
         <div class="card mb-4">
             <% if (errorMessage!='' ) { %>
@@ -27,11 +40,11 @@
                                                 </a>
                                                 <a href="javascript:void(0);"
                                                     class="list-group-item list-group-item-action">
-                                                    <%= order.user_id %>
+                                                    <%= order.user.dataValues.name %>
                                                 </a>
                                                 <a href="javascript:void(0);"
                                                     class="list-group-item list-group-item-action">
-                                                    <%= order.product_id %>
+                                                    <%= order.product.dataValues.name %>
                                                 </a>
                                                 <a href="javascript:void(0);"
                                                     class="list-group-item list-group-item-action">$<%=
